--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -58,7 +58,6 @@ texture_format/etc=false
 texture_format/etc2=false
 texture_format/no_bptc_fallbacks=true
 codesign/enable=false
-codesign/identity_type=0
 codesign/identity=""
 codesign/password=""
 codesign/timestamp=true
@@ -66,11 +65,11 @@ codesign/timestamp_server_url=""
 codesign/digest_algorithm=1
 codesign/description=""
 codesign/custom_options=PoolStringArray(  )
-application/icon=""
+application/icon="res://icon.ico"
 application/file_version=""
 application/product_version=""
-application/company_name=""
-application/product_name=""
+application/company_name="Sleeping Robot Games"
+application/product_name="Snapback"
 application/file_description=""
 application/copyright=""
 application/trademarks=""
